syntax = "proto3";

option csharp_namespace = "RegistryEntryService";

package test;
import "Database.proto";


service RegistryEntry
{
  rpc ScanRegistryEntry(RegistryEntryRequest) returns (stream RegistryEntryResponse) { }
}


message RegistryEntryRequest{
	repeated DbRegistryEntry children = 1;
}


message RegistryEntryResponse{
  string response = 1;
}
