syntax = "proto3";

option csharp_namespace = "ScanWinService";

package test;
import "Platform.proto";

service ScanWin
{
  rpc ScanWinProcess(G_ScanWinRequest) returns (G_ScanWinResponse) { }
}


message G_ScanWinRequest{
	string policyItemName = 1;
	string policyItemVersion = 2;
} 

message G_ScanWinResponse{
  string response = 1;
}
